@@ -19,6 +19,9 @@
   02111-1307, USA.
 */
 
+#import <NGObjWeb/WOContext.h>
+#import <NGObjWeb/WOResponse.h>
+
 #import <Contacts/SOGoContactObject.h>
 #import <Contacts/SOGoContactFolder.h>
 #import <Contacts/SOGoContactFolders.h>
@@ -102,6 +105,25 @@
   selectorComponentClass = @"UIxContactsAclsSelection";
 
   return self;
+}
+
+- (id <WOActionResults>) deleteAction
+{
+  id <WOActionResults> result;
+  NSException <WOActionResults> *ex;
+  WOResponse *response;
+
+  ex = [[self clientObject] delete];
+  if (ex)
+    result = ex;
+  else
+    {
+      response = [context response];
+      [response setStatus: 200];
+      result = response;
+    }
+
+  return result;
 }
 
 - (NSString *) defaultSortKey
